--- a/src/main/webapp/resources/main.css
+++ b/src/main/webapp/resources/main.css
@@ -35,8 +35,12 @@
   height: 100px;
 }
 
+
 .my-seat {
   box-shadow: inset 0 0 1em gold;
+  height: 40px;          /* 新增高度限制 */
+  line-height: 1.2;      /* 减少行间距 */
+  margin: 5px 0;         /* 优化垂直间距 */
 }
 
 div[data-action-on='true'] {
